--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Proyecto de una pagina web de viajes",
   "main": "index.js",
   "scripts": {
-    "tailwind": "npx tailwindcss -i ./src/styles/input.css -o ./public/css/output.css --watch"
+    "tailwind": "tailwindcss -i ./src/styles/input.css -o ./public/css/min.output.css --minify --watch"
   },
   "repository": {
     "type": "git",
