Scroll de recomendados

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Proyecto de una pagina web de viajes",
   "main": "index.js",
   "scripts": {
-    "tailwind": "tailwindcss -i ./src/styles/input.css -o ./public/css/min.output.css --minify --watch"
+    "tailwind": "tailwindcss -i ./src/styles/input.css -o ./public/css/min.output.css --minify --watch",
+    "deploy": "gh-pages -d public"
   },
   "repository": {
     "type": "git",
@@ -19,5 +20,8 @@
   "homepage": "https://github.com/luisAriza/travel_page#readme",
   "devDependencies": {
     "tailwindcss": "^3.1.2"
+  },
+  "dependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
