--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "tailwind": "tailwindcss -i ./src/styles/input.css -o ./public/css/min.output.css --minify --watch",
-    "pug": "pug ./src/template/index.pug -o ./public/ -w",
+    "pug": "pug ./src/index.pug -o ./public/ -w",
     "deploy": "gh-pages -d public"
   },
   "repository": {
