--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "tailwind": "tailwindcss -i ./src/styles/input.css -o ./dist/css/min.output.css --minify --watch",
-    "pug": "pug ./src/view/index.pug -o ./dist/ -w",
+    "pug": "pug ./src/view/index.pug -o ./dist/ -w -P",
     "deploy": "gh-pages -d dist"
   },
   "repository": {
@@ -21,6 +21,7 @@
   "homepage": "https://github.com/luisAriza/travel_page#readme",
   "devDependencies": {
     "pug": "^3.0.2",
+    "pug-cli": "^1.0.0-alpha6",
     "tailwindcss": "^3.1.2"
   },
   "dependencies": {
