--- a/package.json
+++ b/package.json
@@ -23,12 +23,11 @@
     "@parcel/transformer-pug": "^2.6.1",
     "parcel": "^2.6.1",
     "postcss": "^8.4.14",
+    "postcss-nested": "^5.0.6",
     "pug": "^3.0.2",
     "tailwindcss": "^3.1.2"
   },
   "dependencies": {
-    "@parcel/config-default": "^2.6.1",
-    "@parcel/transformer-raw": "^2.6.1",
     "gh-pages": "^4.0.0"
   }
 }
