--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Proyecto de una pagina web de viajes",
   "source": "src/index.pug",
   "scripts": {
-    "start": "parcel -p 8080 --open",
+    "start": "parcel --open",
     "build": "rm -rf dist && parcel build --no-source-maps --public-url .",
     "deploy": "gh-pages -d dist"
   },
